Added modal to use React Select to dynamically add  organizations; although the modal submit isn't appending child

--- a/client/src/components/Form/form.css
+++ b/client/src/components/Form/form.css
@@ -1,6 +1,10 @@
 input, textarea {
   margin-bottom: 20px;
 }
+.org-select{
+  width: 100px;
+  color:black;
+}
 
 #links, #attach {
   width: 200px;
