Made some styling of the UI and designed a logo

--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -1,3 +1,12 @@
 .navBar__name {
   font-size: 2em;
 }
+.navbar{
+  background-color: rgba(22, 69, 114, 0.911);
+}
+.nav-link{
+  color:white;
+}
+.logoImage{
+  
+}
