Did some styling and started input form validation

--- a/client/src/components/AddBtn/addbtn.css
+++ b/client/src/components/AddBtn/addbtn.css
@@ -2,3 +2,8 @@ h1 {
   text-align: center;
   margin-bottom: 20px;
 }
+#add-lesson{
+  border:solid;
+  background-color:  rgba(22, 69, 114, 0.911);
+  box-shadow: 5px 10px    #888888;
+}
