--- a/client/src/components/Form/form.css
+++ b/client/src/components/Form/form.css
@@ -5,7 +5,9 @@ input, textarea {
   width: 100px;
   color:black;
 }
-
+.proj-select{
+  width:100px;
+}
 #links, #attach {
   width: 200px;
 }
@@ -22,6 +24,37 @@ input, textarea {
   border-color: green;
 }
 
+
 button {
   height: 40px;
+  box-shadow: 5px 10px #888888;
+  background-color: rgba(22, 69, 114, 0.911);
+}
+#addNew{
+  background-color: rgba(22, 69, 114, 0.911);
+}
+#title{
+  border:solid;
+  box-shadow: 5px 10px   #888888;
+}
+#objective{
+  border:solid;
+}
+#overview{
+  border:solid;
+}
+#preparation{
+  border:solid;
+}
+#agenda{
+  border:solid;
+}
+#materials{
+  border:solid;
+}
+#description{
+  border:solid;
+}
+#submit{
+  background-color: rgba(22, 69, 114, 0.911);
 }
