--- a/client/src/components/AddBtn/addbtn.css
+++ b/client/src/components/AddBtn/addbtn.css
@@ -3,7 +3,7 @@ h1 {
   margin-bottom: 20px;
 }
 #add-lesson{
-  border:solid;
+  border: solid white .5px;
   background-color:  rgba(22, 69, 114, 0.911);
-  box-shadow: 5px 10px    #888888;
+  box-shadow: 2px 4px    #888888;
 }
