--- a/client/src/components/Form/form.css
+++ b/client/src/components/Form/form.css
@@ -39,7 +39,7 @@ button {
 }
 #title{
   border:solid;
-  box-shadow: 5px 10px   #888888;
+  box-shadow: 2px 4px   #888888;
 }
 #objective{
   border:solid;
@@ -61,4 +61,12 @@ button {
 }
 #submit{
   background-color: rgba(22, 69, 114, 0.911);
+}
+
+.error {
+  display: flex;
+  justify-content: center;
+  color: red;
+  text-align: center;
+  margin-bottom: 10px;
 }
