Added modal to tell user that form has been saved. Popovers would completely affect other functions so we might use it later for improvement

--- a/client/src/components/Form/form.css
+++ b/client/src/components/Form/form.css
@@ -62,3 +62,15 @@ button {
 #submit{
   background-color: rgba(22, 69, 114, 0.911);
 }
+.saveModal{
+  width:500px;
+  height:200px;
+  margin: auto;
+  margin-top:100px;
+  display: block;
+  box-shadow: 2px 4px #888888;
+  background-color: rgba(22, 69, 114, 0.5)
+}
+.saveConfirm{
+  text-align: center;
+}
