--- a/client/src/components/Form/form.css
+++ b/client/src/components/Form/form.css
@@ -1,9 +1,9 @@
 .org-select{
-  width: 150px;
+  width: 25%;
   color:black;
 }
 .proj-select{
-  width:150px;
+  width:25%;
 }
 #links, #attach {
   width: 200px;
@@ -13,9 +13,18 @@
 float:right;
 }
 
-#submit {
-  margin-top: 30px;
-  margin-bottom: 50px; 
+.finalActions {
+  margin-top: 1%;
+  margin-bottom: 1%; 
+  margin-right: 1%;
+  background-color: rgba(22, 69, 114, 0.911);
+}
+
+.title{
+  margin-bottom: 3%;
+  margin-top: 2%;
+  font-size: 150%;
+  font-weight: bold;
 }
 
 .invalid {
