--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -5,4 +5,10 @@
 
 h3{
   text-align: left !important;
+  font-family: 'Poiret One', cursive;
+  
+}
+
+h1{
+  font-family: 'Arbutus Slab', serif;
 }
