--- a/client/src/components/DashContent/dashContent.css
+++ b/client/src/components/DashContent/dashContent.css
@@ -1,7 +1,7 @@
 .dash-content{
-    /* box-shadow: 2px 4px #888888; */
-    /* border:black solid 5px; */
-    /* background-color: rgb(212, 220, 245); */
+    box-shadow: 2px 4px #888888;
+    /* border:black solid 1px; */
+    /* background-color: rgb(210, 233, 248); */
     border-radius: 5%;
     padding: 10px;
 }
