attempting to fix table

--- a/client/src/components/DashProjects/dashproj.css
+++ b/client/src/components/DashProjects/dashproj.css
@@ -6,7 +6,7 @@
 } */
 
 @media (max-width: 767px) { 
-  #dashcard {
-      background-color: blueviolet;
-  }
+  /* #dashcard {
+      background-color: blueviolet; 
+  }*/
 }
