--- a/client/src/components/LessonPlan/lessonplan.css
+++ b/client/src/components/LessonPlan/lessonplan.css
@@ -1,3 +1,12 @@
-.lessons {
+/* .lessons {
   border-bottom: lightgray solid 1px;
 }
+
+@media (max-width: 767px) { 
+   #dashcard {
+      background-color: blueviolet; 
+  
+  .lessons {
+    border-bottom: lightgray solid 1px;
+  }
+} */
