--- a/client/src/components/AddBtn/addbtn.css
+++ b/client/src/components/AddBtn/addbtn.css
@@ -4,6 +4,7 @@ h1 {
 }
 #add-lesson{
   color: white;
+  justify-content: end;
   /* border: solid white .5px;
   background-color:  rgba(22, 69, 114, 0.911);
   box-shadow: 2px 4px    #888888; */
