--- a/client/src/components/DashProjects/dashproj.css
+++ b/client/src/components/DashProjects/dashproj.css
@@ -5,8 +5,8 @@
   display: inline;
 } */
 
-@media (max-width: 767px) { 
-  /* #dashcard {
+/* @media (max-width: 767px) { 
+  #dashcard {
       background-color: blueviolet; 
-  }*/
-}
+  }
+} */
