--- a/client/src/components/LessonPlan/lessonplan.css
+++ b/client/src/components/LessonPlan/lessonplan.css
@@ -1,12 +1,9 @@
 /* .lessons {
   border-bottom: lightgray solid 1px;
-}
+}*/
 
 @media (max-width: 767px) { 
-   #dashcard {
-      background-color: blueviolet; 
-  
-  .lessons {
-    border-bottom: lightgray solid 1px;
-  }
-} */
+   p {
+     font-size: 14px;
+   }
+} 
