--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -15,8 +15,12 @@ h1{
 
 @media (max-width: 812px) { 
   h3{
-    text-align: left !important;
-    font-family: 'Poiret One', cursive; 
     font-size: 20px;
+  }
+} 
+
+@media (max-width: 320px) { 
+  h3{
+    font-size: 16px;
   }
 } 
